git push resolved

--- a/index.html
+++ b/index.html
@@ -207,17 +207,10 @@
             <div class="members-content">
                 <div class="row">
                     <div class="col-lg-5">
-                        <div class="member-area-content d-flex align-items-center">
-                            <h2 class="member-vertical">Member</h2>
+                        <div class="member-area-content align-items-center" style="display: flex!important;">
+                            <h2 class="member-vertical" style="writing-mode: vertical-rl!important;">Member</h2>
                             <div class="member-content-text" id="slider-content">
-                                <h3>「e-Sports」の最前線で活動する<br>
-                                    プロゲーミングチーム</h3>
-                                <p>●●●●●●●●●●●●●●●●●●<br>
-                                    ●●●●●●●●●●●●●●●●●●<br>
-                                    ●●●●●●●●●●●●●●●●●●<br>
-                                    ●●●●●●●●</p>
-                                <p>●●●●●●●●●●●●●●●●<br>
-                                    ●●●●</p>
+
                             </div>
                         </div>
                     </div>
