details page bottom slider issues fixed

--- a/index.html
+++ b/index.html
@@ -528,6 +528,7 @@
     <script src="assets/js/popper.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/3dSlider.js"></script>
+    <script src="assets/js/member-slider.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
