git slider resulution check

--- a/index.html
+++ b/index.html
@@ -204,22 +204,29 @@
 
 
         <div class="container">
-            <div class="members-content">
-                <div class="row">
-                    <div class="col-lg-5">
-                        <div class="member-area-content align-items-center" style="display: flex!important;">
-                            <h2 class="member-vertical" style="writing-mode: vertical-rl!important;">Member</h2>
-                            <div class="member-content-text" id="slider-content">
+            <div class="d-flex">
+                <div>
+                    <div class="members-content">
+                        <div class="row">
+                            <div class="col-lg-5">
+                                <div class="member-area-content align-items-center" style="display: flex!important;">
+                                    <h2 class="member-vertical" style="writing-mode: vertical-rl!important;">Member</h2>
+                                    <div class="member-content-text" id="slider-content">
 
+                                    </div>
+                                </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div style="flex: 1;position: relative;display: flex;justify-content: flex-end">
+                    <div id="cardSlider" class="members-main-slider">
                     </div>
                 </div>
             </div>
         </div>
         <!---Card Slider-->
-        <div id="cardSlider" class="members-main-slider">
-        </div>
+
         <!---Card Slider End-->
     </section>
 
