--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
 
         <div class="container">
-            <div class="d-flex">
+            <div class="d-flex flex-column-max">
                 <div>
                     <div class="members-content">
                         <div class="row">
