--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
         <div class="container">
             <div class="d-flex flex-column-max">
-                <div>
+                <div class="d-flex align-items-center">
                     <div class="members-content">
                         <div class="row">
                             <div class="col-lg-5">
